<resources>
  <string name="app_name">kotlin-navigation-sample</string>

  <!-- TODO: Remove or change this placeholder text -->
  <string name="basic_nav">Basic Nav</string>
  <string name="title_activity_basic_navigation">Basic Navigation</string>
  <string name="welcome_text">Greetings!</string>
  <string name="action_label">action</string>
  <string name="title_activity_bottom_navigation">Bottom Navigation</string>
  <string name="title_home">Home</string>
  <string name="title_dashboard">Dashboard</string>
  <string name="title_notifications">Notifications</string>
  <string name="bottom_nav">Bottom Nav</string>
  <string name="image_description">Image Description</string>
  <string name="title_activity_drawer_navigation">Drawer Navigation</string>
  <string name="navigation_drawer_open">Open navigation drawer</string>
  <string name="navigation_drawer_close">Close navigation drawer</string>
  <string name="nav_header_title">Android Studio</string>
  <string name="nav_header_subtitle">android.studio@android.com</string>
  <string name="nav_header_desc">Navigation header</string>
  <string name="action_settings">Settings</string>
  <string name="drawer_nav">Drawer Nav</string>
  <string name="title_import">Import</string>
  <string name="title_gallery">Gallery</string>
  <string name="title_slideshow">Slideshow</string>
  <string name="title_tools">Tools</string>
  <string name="title_communicate">Communicate</string>
  <string name="title_share">Share</string>
  <string name="title_send">Send</string>
  <string name="title_activity_deep_navigation">Deep Navigation</string>
  <string name="deep_nav">Deep Nav</string>

  <!-- TODO: Remove or change this placeholder text -->
  <string name="hello_blank_fragment">Hello blank fragment</string>
  <string name="title_activity_safe_args_navigation">Safe Arguments</string>
  <string name="input_title">Please fill the details</string>
  <string name="input_name">Name</string>
  <string name="input_amount">Amount</string>
  <string name="input_submit">Submit</string>
  <string name="input_remember_my_choice">Remember my choice</string>
  <string name="confirm_transfer">Transfer</string>
  <string name="confirm_to">to</string>
  <string name="confirm_remember_this_choice">I will remember this choice</string>
  <string name="done">Done</string>
  <string name="title_activity_conditional_navigation">Conditional Navigation</string>
  <string name="add_to_cart">Add to cart</string>
  <string name="product_app_title">ProdCart</string>
  <string name="username">UserName</string>
  <string name="password">Password</string>
  <string name="login">Login</string>
  <string name="sign_up">Sign up</string>
  <string name="or">or</string>
</resources>
