<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".conditional.LoginFragment"
    >

  <TextView
      android:id="@+id/productAppTitle"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:text="@string/product_app_title"
      android:textColor="@color/colorAccent"
      android:textStyle="bold"
      app:layout_constraintEnd_toEndOf="@+id/productAppLogo"
      app:layout_constraintStart_toStartOf="@+id/productAppLogo"
      app:layout_constraintTop_toBottomOf="@+id/productAppLogo"
      style="@style/Base.TextAppearance.AppCompat.Large"
      />

  <androidx.appcompat.widget.AppCompatImageView
      android:id="@+id/productAppLogo"
      android:layout_width="86dp"
      android:layout_height="86dp"
      android:layout_marginEnd="8dp"
      android:layout_marginStart="8dp"
      android:layout_marginTop="16dp"
      android:adjustViewBounds="true"
      android:tint="@color/colorAccent"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent"
      app:srcCompat="@drawable/ic_dashboard_black_24dp"
      />

  <com.google.android.material.textfield.TextInputLayout
      android:id="@+id/userName"
      android:layout_width="368dp"
      android:layout_height="wrap_content"
      android:layout_marginEnd="16dp"
      android:layout_marginStart="16dp"
      android:layout_marginTop="16dp"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/productAppTitle"
      >
    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/userNameText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/username"
        />
  </com.google.android.material.textfield.TextInputLayout>

  <com.google.android.material.textfield.TextInputLayout
      android:id="@+id/password"
      android:layout_width="368dp"
      android:layout_height="wrap_content"
      android:layout_marginEnd="8dp"
      android:layout_marginStart="8dp"
      android:layout_marginTop="8dp"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/userName"
      >

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/passwordText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/password"
        android:inputType="textPassword"
        />
  </com.google.android.material.textfield.TextInputLayout>

  <Button
      android:id="@+id/loginButton"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginEnd="8dp"
      android:layout_marginStart="8dp"
      android:layout_marginTop="16dp"
      android:text="@string/login"
      android:textSize="20sp"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/password"
      style="@style/Base.Widget.AppCompat.Button.Borderless.Colored"
      />

  <TextView
      android:id="@+id/textViewOr"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginTop="8dp"
      android:text="@string/or"
      app:layout_constraintEnd_toEndOf="@+id/loginButton"
      app:layout_constraintStart_toStartOf="@+id/loginButton"
      app:layout_constraintTop_toBottomOf="@+id/loginButton"
      />

  <Button
      android:id="@+id/sigupButton"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginTop="16dp"
      android:text="@string/sign_up"
      app:layout_constraintEnd_toEndOf="@+id/loginButton"
      app:layout_constraintStart_toStartOf="@+id/loginButton"
      app:layout_constraintTop_toBottomOf="@+id/textViewOr"
      style="@style/Base.Widget.AppCompat.Button.Borderless.Colored"
      />


</androidx.constraintlayout.widget.ConstraintLayout>