<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    tools:context=".bottomnav.BottomNavFragment"
    >

  <androidx.appcompat.widget.AppCompatImageView
      android:id="@+id/vectorImageView"
      android:layout_width="192dp"
      android:layout_height="192dp"
      android:layout_marginEnd="8dp"
      android:layout_marginStart="8dp"
      android:adjustViewBounds="true"
      android:contentDescription="@string/image_description"
      app:layout_constraintBottom_toTopOf="@+id/textView"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent"
      app:srcCompat="@mipmap/ic_launcher_round"
      />

  <TextView
      android:id="@+id/textView"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginTop="4dp"
      android:text="@string/welcome_text"
      android:textAlignment="center"
      app:layout_constraintBottom_toTopOf="@+id/actionBtn"
      app:layout_constraintEnd_toEndOf="@+id/vectorImageView"
      app:layout_constraintHorizontal_bias="0.5"
      app:layout_constraintStart_toStartOf="@+id/vectorImageView"
      app:layout_constraintTop_toBottomOf="@+id/vectorImageView"
      style="@style/TextAppearance.AppCompat.Large"
      />

  <Button
      android:id="@+id/actionBtn"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_gravity="end"
      android:layout_marginBottom="8dp"
      android:layout_marginTop="8dp"
      android:text="@string/action_label"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintEnd_toEndOf="@+id/textView"
      app:layout_constraintHorizontal_bias="0.5"
      app:layout_constraintStart_toStartOf="@+id/textView"
      app:layout_constraintTop_toBottomOf="@+id/textView"
      />

</androidx.constraintlayout.widget.ConstraintLayout>
